Ignore personalized Visual Code prefs
Ignore any user-side preferences that is generated by the Visual Code editor.

I have decided to flip from PowerShell ISE to Visual Code.  With ISE, I manually had to perform all testing operations and it is insanely difficult to debug via CLI.  Visual Code offers me a lot of ease during testing, so much easier to debug.  I've tried to use Visual Studio, but the plugin just does not seem to offer a lot of freedom nor easy methods of debugging.

Also one must keep in mind that Windows, by default - at the time of writing this, still ships with PowerShell v5.1.  This program, still very much WIP, requires PowerShell v6.x foundation.  With that in mind, I need an easy way to execute the software without depending on the default behavior from Windows, defaults to using PowerShell v5.1.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,14 @@
 
 
 
+# Text Editors and IDEs
+# ---------------------
+
+# Visual Code
+.vscode
+
+
+
 # Standard GitIgnore:
 # ---------------------
 
