Ignore Program Mode scripts in Compile dir
Because I sometimes put Clean and Uninstall scripts in the Compile directory, for RnD reasons, I want to avoid accidentally adding these scripts to the directory within the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@
 # Compiled Launcher
 /Compile/Launcher.ps1
 
+# Program Mode: Uninstall
+/Compile/Clean.ps1
+
+# Program Mode: Clean
+/Compile/Uninstall.ps1
+
 
 
 
